# alloxid

./: .env  .env.example  .gitignore  Cargo.toml  README.md  justfile
alloxid-front/: .env.example  Cargo.toml  Dioxus.toml  README.md  config.ts  fresh.gen.ts  import_map.json  main.ts
alloxid-front/components/: Layout.tsx  Link.tsx  mod.ts
alloxid-front/islands/: AuthForm.tsx  LinkButton.tsx
alloxid-front/routes/: _middleware.ts  index.tsx  sign-in.tsx  sign-up.tsx
alloxid-front/routes/api/user/: [id].ts  create.ts  login.ts  logout.ts
alloxid-front/src/: app.rs  auth_form.rs  health_check.rs  lib.rs  main.rs
alloxid-front/src/app/: health_check.rs
alloxid-front/static/: main.css
alloxid-grpc/: Cargo.toml  README.md
alloxid-grpc/proto/: hello.proto
alloxid-grpc/src/: client.rs.bak  lib.rs  server.rs
alloxid-grpc/tests/: hello.rs
alloxid-http/: Cargo.toml  README.md
alloxid-http/config/: default.toml  dev.toml  prod.toml  test.toml
alloxid-http/migrations/: 20201122154421_create_table_users.sql
alloxid-http/src/: database.rs  error.rs  helpers.rs  lib.rs  main.rs  request_builder.rs  settings.rs
alloxid-http/src/auth/: extractor.rs  mod.rs
alloxid-http/src/endpoints/: grpc.rs  mod.rs
alloxid-http/src/endpoints/user/: create.rs  delete.rs  login.rs  update.rs
alloxid-http/src/model/: user.rs
alloxid-http/tests/: users.rs
alloxid-http/tests/helpers/: mod.rs
config/: default.toml  test.toml
migrations/: 20201122154421_create_table_users.sql  20201122162022_create_table_todos.sql  20201122162035_populate_table_todos.sql.sql
scripts/: init_db.sh
src/: configuration.rs  connections.rs  database.rs  endpoints.rs  error.rs  helpers.rs  lib.rs  log_middleware.rs  main.rs  settings.rs  telemetry.rs
src/auth/: extractor.rs  middleware.rs  middleware_ax.rs  mod.rs
src/endpoints/: mod.rs  todo.rs  user.rs  user_ax.rs
src/endpoints/user/: get.rs  mod.rs
src/model/: user.rs
src/tests/: create_user.rs  mod.rs  test_helpers.rs  todo.rs  user.rs
tests/: health.rs  health_check.rs  users.rs
tests/helpers/: mod.rs
