[package]
name = "fullstack-rs"
version = "0.1.0"
authors = ["synul <synul@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
config = "0.10.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3", features = ["compat"] }
http-types = "2.4.0"
pretty_env_logger = "0.4.0"
rand = "0.8.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.59"
sqlx = { version = "0.4", features = [ "chrono", "runtime-async-std-rustls", "json", "postgres", "uuid" ] }
tide = "0.13.0"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }
argonautica = "0.2.0"

[dev-dependencies]
assert-json-diff = "1.1.0"
surf = "2.1.0"

