[package]
name = "fullstack"
version = "0.1.0"
authors = ["synul <synul@mailbox.org>"]
edition = "2018"

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
argonautica = "0.2.0"
async-std = { version = "1.8.0", features = ["attributes", "unstable"] }
config = "0.10.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.8", features = ["compat"] }
http-types = "2.9.0"
pretty_env_logger = "0.4.0"
rand = "0.8.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
sqlx = { version = "0.4.2", features = [ "chrono", "runtime-async-std-rustls", "json", "postgres", "uuid" ] }
tide = "0.15.0"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }

[dev-dependencies]
assert-json-diff = "1.1.0"
surf = "2.1.0"

