[package]
name = "fullstack"
version = "0.1.0"
authors = ["synul <synul@mailbox.org>"]
edition = "2018"

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
argonautica = "0.2.0"
async-std = { version = "1.8.0", features = ["attributes", "unstable", "tokio1"] }
config = "0.10.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.8", features = ["compat"] }
http-types = "2.9.0"
jsonwebtoken = "7.2.0"
names = "0.11.0"
rand = "0.8.4"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
sqlx = { version = "0.4.2", features = [ "chrono", "runtime-async-std-rustls", "json", "postgres", "uuid" ] }
tide = "0.15.0"
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.2.5"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.18", features = [ "registry", "env-filter" ] }
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }

[dev-dependencies]
assert-json-diff = "1.1.0"
once_cell = "1.8.0"
reqwest = { version = "0.11.9", features = ["json"] }

