[package]
name = "alloxid-front"
version = "0.1.0"
authors = ["morlinbrot <morlinbrot@mailbox.org>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
log = "0.4.6"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1.0.136"
