[package]
name = "alloxid-front"
version = "0.1.0"
authors = ["morlinbrot <morlinbrot@mailbox.org>"]
edition = "2021"

[dependencies]
# fermi = { git = "https://github.com/dioxuslabs/dioxus", tag = "v0.2.4" }
# dioxus = { version = "0.3.0" }
# dioxus-router = "0.3.0"
# dioxus-web = "0.3.0"

dioxus = { version = "0.2.4", features = ["web", "router", "hooks"] }
log = "0.4.6"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.91"
