[package]
name = "alloxid-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

# [[bin]]
# name = "client"
# path = "src/client.rs"

[dependencies]
tonic = "0.7.1"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"
