[package]
name = "alloxid-http"
version = "0.1.0"
authors = ["morlinbrot <morlinbrot@mailbox.org>"]
edition = "2021"

[dependencies]
argonautica = "0.2.0"
async-std = { version = "1.8.0", features = ["attributes", "unstable", "tokio1"] }
async-trait = "0.1.52"
axum = "0.5.0"
axum-macros = "0.1.0"
config = "0.10.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.8", features = ["compat"] }
futures-util = "0.3.21"
http = "0.2.6"
http-types = "2.9.0"
jsonwebtoken = "7.2.0"
names = "0.11.0"
rand = "0.8.4"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
sqlx = { version = "0.4.2", features = [ "chrono", "runtime-async-std-rustls", "json", "postgres", "uuid" ] }
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["macros"] }
tower = "0.4.11"
tower-http = { version = "0.2.2", features = ["trace", "sensitive-headers", "auth", "cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.2.5"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.18", features = [ "registry", "env-filter" ] }
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }

[dev-dependencies]
once_cell = "1.8.0"
reqwest = { version = "0.11.9", features = ["json"] }

